fetch and update, converse functions and kobjets

--- a/includes/bibliography.bib
+++ b/includes/bibliography.bib
@@ -166,3 +166,10 @@
   edition= {4.15},
   url = {http://man7.org/linux/man-pages/man2/sigaction.2.html},
 }
+
+@misc{containerof,
+    author = {Radek Pazdera},
+    title = {The Magical container\_of() Macro},
+    howpublished = {\url{http://radek.io/2012/11/10/magical-container_of-macro/}},
+    note = {Online; accessed 30.4.2018} 
+}
