--- a/includes/attachmentB.tex
+++ b/includes/attachmentB.tex
@@ -374,3 +374,73 @@ void medusa_l1_ipc_free_security(struct kern_ipc_perm *ipcp)
 	}
 }
 \end{lstlisting}
+
+\begin{lstlisting}[
+  caption={Operácie \texttt{fetch}},
+  label={lst:fetch},
+  language=c
+]
+void * ipc_fetch(unsigned int id, unsigned int ipc_class, void * (*ipc_concrete_kern2kobj)(struct kern_ipc_perm *))
+{
+	struct kern_ipc_perm *ipcp;
+	struct ipc_ids *ids;
+	void *new_kobj = NULL;
+
+	ids = medusa_get_ipc_ids(ipc_class);
+	if(!ids)
+		goto out_err;
+
+	rcu_read_lock();
+
+	ipcp = ipc_obtain_object_check(ids, id);
+	if(IS_ERR(ipcp) || !ipcp)
+		goto out_unlock0;
+
+	new_kobj = ipc_concrete_kern2kobj(ipcp);
+out_unlock0:
+	rcu_read_unlock();
+out_err:
+	return new_kobj;
+}
+\end{lstlisting}
+
+\begin{lstlisting}[
+  caption={Operácie \texttt{update}},
+  label={lst:update},
+  language=c
+]
+medusa_answer_t ipc_update(unsigned int id, unsigned int ipc_class, struct medusa_kobject_s * kobj, int (*ipc_kobj2kern)(struct medusa_kobject_s *, struct kern_ipc_perm *))
+{
+	struct medusa_l1_ipc_s* security_s;
+	struct kern_ipc_perm *ipcp;
+	struct ipc_ids *ids;
+	int retval = MED_ERR;
+	
+	ids = medusa_get_ipc_ids(ipc_class);
+	if(!ids)
+		goto out_err;
+	
+	rcu_read_lock();
+
+	ipcp = ipc_obtain_object_check(ids, id);
+	if(IS_ERR(ipcp) || !ipcp)
+		goto out_unlock0;
+
+	if (!ipc_rcu_getref(ipcp)) {
+		goto out_unlock0;
+	}
+
+	security_s = ipc_security(ipcp);
+
+	ipc_lock_object(ipcp);
+
+	retval = ipc_kobj2kern(kobj, ipcp);
+		
+	ipc_unlock_object(ipcp);
+	ipc_rcu_putref(ipcp, ipc_rcu_free);
+out_unlock0:
+	rcu_read_unlock();
+out_err:
+	return retval;
+}
+\end{lstlisting}
