--- a/includes/abstract.tex
+++ b/includes/abstract.tex
@@ -1,1 +1,1 @@
-Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean et est a dui semper facilisis. Pellentesque placerat elit a nunc. Nullam tortor odio, rutrum quis, egestas ut, posuere sed, felis. Vestibulum placerat feugiat nisl. Suspendisse lacinia, odio non feugiat vestibulum, sem erat blandit metus, ac nonummy magna odio pharetra felis. Vivamus vehicula velit non metus faucibus auctor. Nam sed augue. Donec orci. Cras eget diam et dolor dapibus sollicitudin. In lacinia, tellus vitae laoreet ultrices, lectus ligula dictum dui, eget condimentum velit dui vitae ante. Nulla nonummy augue nec pede. Pellentesque ut nulla. Donec at libero. Pellentesque at nisl ac nisi fermentum viverra. Praesent odio. Phasellus tincidunt diam ut ipsum. Donec eget est. A skúška mäkčeňov a dĺžnov.
+Diplomová práca pojednáva o IPC mechanizmoch dostupných v operačnom systéme Linux a taktiež popisuje interné štruktúry a fungovanie niektorých z nich. Taktiež opisuje štruktúru a fungovanie bezpečnostného systému Medusa ako aj úlohu autorizačného servera v tomto systéme a jeho dostupne varianty. Práca popisuje implementovanie ďalších častí do bezpečnostného systému Medusa, ktoré sa starajú o kontrolu prístupu k IPC mechanizmom. Detailne popisuje použité štruktúry, funkcie, ich význam ako aj použitie týchto novovytvorených entít.
