--- a/includes/abstract.tex
+++ b/includes/abstract.tex
@@ -1,1 +1,1 @@
-Diplomová práca pojednáva o IPC mechanizmoch dostupných v operačnom systéme Linux a taktiež popisuje interné štruktúry a fungovanie niektorých z nich. Taktiež opisuje štruktúru a fungovanie bezpečnostného systému Medusa ako aj úlohu autorizačného servera v tomto systéme a jeho dostupne varianty. Práca popisuje implementovanie ďalších častí do bezpečnostného systému Medusa, ktoré sa starajú o kontrolu prístupu k IPC mechanizmom. Detailne popisuje použité štruktúry, funkcie, ich význam ako aj použitie týchto novovytvorených entít.
+Diplomová práca pojednáva o IPC mechanizmoch dostupných v operačnom systéme Linux a popisuje interné štruktúry, fungovanie a používanie týchto mechanizmov. Opisuje štruktúru a fungovanie bezpečnostného systému Medusa, spolu s LSM frameworkom, ako aj úlohu autorizačného servera v tomto systéme, a jeho dostupné varianty. Práca sa zaoberá implementovaním ďalších častí do bezpečnostného systému Medusa, ktorých úlohou je zachytiť systémové volania IPC mechanizmov, spracovať štruktúry týchto mechanizmov a rozhodnúť o povolení alebo zakázaní systémového volania. Detailne popisuje použité štruktúry, funkcie a ich význam, ako aj použitie týchto novovytvorených entít.
