--- a/includes/abstractEN.tex
+++ b/includes/abstractEN.tex
@@ -1,1 +1,1 @@
-On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain and trouble that are bound to ensue; and equal blame belongs to those who fail in their duty through weakness of will, which is the same as saying through shrinking from toil and pain. These cases are perfectly simple and easy to distinguish. In a free hour, when our power of choice is untrammelled and when nothing prevents our being able to do what we like best, every pleasure is to be welcomed and every pain avoided. But in certain circumstances and owing to the claims of duty or the obligations of business it will frequently occur that pleasures have to be repudiated and annoyances accepted. The wise man therefore always holds in these matters to this principle of selection: he rejects pleasures to secure other greater pleasures, or else he endures pains to avoid worse pains.
+This thesis outlines IPC mechanisms available in the Linux operating system and provides details of the associated internal structures, as well as the operation and use of these mechanisms. Structure and behaviour of the security system Medusa and the LSM framework are described together with the role of the authorisation server and its variants in the system. The work of this thesis includes implementation of further components of the security system Medusa, whose role is to catch system calls of the IPC mechanisms, manage their structures, and decide whether to allow or reject these system calls. Furthermore, the thesis provides a detailed overview of the structures and functions used, together with their meaning, and describes the use of these newly-developed entities.
